--- a/Studienarbeit/content/Fazit.tex
+++ b/Studienarbeit/content/Fazit.tex
@@ -1,4 +1,7 @@
 \chapter{Fazit}
 
-Zeilen source code
-Tests Robustheit, Erweiterbarkeit, Usability
+Es ist mir gelungen ein robustes und für Änderungen offenes Framework zu entwickeln, mit dem man Tests in einer laufenden Unity-Umgebung ausführen kann. Dabei hat es sich als sehr schwierig herausgestellt mehr Funktionalitäten zu entwickeln, wie sie bei bereits existierenden Frameworks wie UUnit und SharpUnit vorhanden sind. Deswegen ist es nachvollziehbar, dass diese Funktionalitäten noch von niemand anderem entwickelt wurden.
+
+Das Entwickeln eines automatisierten Test-Frameworks an sich ist durch bestehende Techniken wie Attribute (oder \textit{Annotations} in Java) und \textit{Reflection} gut möglich. Durch die saubere Aufteilung von Verantwortlichkeiten hebt sich JUUT strukturell von UUnit und SharpUnit ab und ist leichter zu verstehen und anzuwenden.
+
+Allerdings lässt sich hinsichtlich der Benutzerfreundlichkeit und der Präsentation der Testergebnisse einiges verbessern. Und auch die Erweiterungen der Testmöglichkeiten war im Zeitrahmen dieser Studienarbeit nicht möglich.
