--- a/Studienarbeit/literatur.tex
+++ b/Studienarbeit/literatur.tex
@@ -3,7 +3,12 @@
 \bibitem[FRE10]{FRE10}
   \textsc{Steve Freeman und Nat Pryce}: 
   \textbf{Growing Object-Oriented Software, Guided by Tests}.
-  2010, Addison-Wesley Professional, S. 1-67
+  2010, Addison-Wesley Professional
+  
+\bibitem[FEA04]{FEA04}
+  \textsc{Michael Feathers}: 
+  \textbf{Working Effectively with Legacy Code}.
+2004, Prentice Hall
     
 \bibitem[HEN10]{HEN10}
   \textsc{Ryan Henson Creighton}
