--- a/Studienarbeit/content/Appendix.tex
+++ b/Studienarbeit/content/Appendix.tex
@@ -62,6 +62,7 @@ protected override bool Validate(MemberInfo member) {
     return false;
 }
 \end{lstlisting}
+\clearpage
 
 \subsection{Scanners}
 \label{sec:Appendix_Scanners}
